tests/snapshots/test__tests__single_regex2-3.snap
---
source: tests/test.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    union: U16U16U32U32U32(
        EngineBase {
            grammar: Grammar {
                start_nonterminal: "start[0]",
                rules: "start[0] ::= #\"\\A[0-9]+\\z\"[0]\"\n\"[0];\n",
                id_to_regexes: {
                    "#\"\\A[0-9]+\\z\"[0]": Dfa(
                        dense::DFA(
                        D 000000: 
                        Q 000004: 
                         *000008: 
                          000012: \x01 => 20
                          000016: 
                          000020: \x01 => 20, EOI => 8
                        
                        START-GROUP(unanchored)
                          NonWordByte => 000000
                          WordByte => 000000
                          Text => 000000
                          LineLF => 000000
                          LineCR => 000000
                          CustomLineTerminator => 000000
                        START-GROUP(anchored)
                          NonWordByte => 000016
                          WordByte => 000016
                          Text => 000012
                          LineLF => 000016
                          LineCR => 000016
                          CustomLineTerminator => 000016
                        state length: 6
                        pattern length: 1
                        flags: Flags { has_empty: false, is_utf8: true, is_always_start_anchored: true }
                        )
                        ,
                    ),
                },
                id_to_regex_first_bytes: [
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            0,
                        ),
                        [],
                    ),
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            4,
                        ),
                        [],
                    ),
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            8,
                        ),
                        [],
                    ),
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            12,
                        ),
                        [
                            48,
                            49,
                            50,
                            51,
                            52,
                            53,
                            54,
                            55,
                            56,
                            57,
                        ],
                    ),
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            16,
                        ),
                        [],
                    ),
                    (
                        "#\"\\A[0-9]+\\z\"[0]",
                        StateID(
                            20,
                        ),
                        [
                            48,
                            49,
                            50,
                            51,
                            52,
                            53,
                            54,
                            55,
                            56,
                            57,
                        ],
                    ),
                ],
                id_to_terminals: [
                    (
                        "\"\n\"[0]",
                        [
                            10,
                        ],
                    ),
                ],
            },
            allowed_first_bytes: [
                10,
                48,
                49,
                50,
                51,
                52,
                53,
                54,
                55,
                56,
                57,
            ],
            allowed_token_ids: [
                "\n[11]",
                "0[49]",
                "1[50]",
                "2[51]",
                "3[52]",
                "4[53]",
                "5[54]",
                "6[55]",
                "7[56]",
                "8[57]",
                "9[58]",
                "00[620]",
                "01[621]",
                "02[622]",
                "03[623]",
                "04[624]",
                "05[625]",
                "06[626]",
                "07[627]",
                "08[628]",
                "09[629]",
                "10[630]",
                "11[631]",
                "12[632]",
                "13[633]",
                "14[634]",
                "15[635]",
                "16[636]",
                "17[637]",
                "18[638]",
                "19[639]",
                "20[640]",
                "21[641]",
                "22[642]",
                "23[643]",
                "24[644]",
                "25[645]",
                "26[646]",
                "27[647]",
                "28[648]",
                "29[649]",
                "30[650]",
                "31[651]",
                "32[652]",
                "33[653]",
                "34[654]",
                "35[655]",
                "36[656]",
                "37[657]",
                "38[658]",
                "39[659]",
                "40[660]",
                "41[661]",
                "42[662]",
                "43[663]",
                "44[664]",
                "45[665]",
                "46[666]",
                "47[667]",
                "48[668]",
                "49[669]",
                "50[670]",
                "51[671]",
                "52[672]",
                "53[673]",
                "54[674]",
                "55[675]",
                "56[676]",
                "57[677]",
                "58[678]",
                "59[679]",
                "60[680]",
                "61[681]",
                "62[682]",
                "63[683]",
                "64[684]",
                "65[685]",
                "66[686]",
                "67[687]",
                "68[688]",
                "69[689]",
                "70[690]",
                "71[691]",
                "72[692]",
                "73[693]",
                "74[694]",
                "75[695]",
                "76[696]",
                "77[697]",
                "78[698]",
                "79[699]",
                "80[700]",
                "81[701]",
                "82[702]",
                "83[703]",
                "84[704]",
                "85[705]",
                "86[706]",
                "87[707]",
                "88[708]",
                "89[709]",
                "90[710]",
                "91[711]",
                "92[712]",
                "93[713]",
                "94[714]",
                "95[715]",
                "96[716]",
                "97[717]",
                "98[718]",
                "99[719]",
            ],
            token_ids_to_finish: [
                "\n[11]",
            ],
            earley_sets: [
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .#\"\\A[0-9]+\\z\"[0]\"\n\"[0]",
                        start_position: 0,
                        state: "[3(InProgress)]",
                    },
                ],
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> #\"\\A[0-9]+\\z\"[0].\"\n\"[0]",
                        start_position: 0,
                        state: "[0]",
                    },
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .#\"\\A[0-9]+\\z\"[0]\"\n\"[0]",
                        start_position: 0,
                        state: "[5(Accept)]",
                    },
                ],
            ],
            cache: [
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .#\"\\A[0-9]+\\z\"[0]\"\n\"[0]",
                                start_position: 0,
                                state: "[3(InProgress)]",
                            },
                        ],
                    ],
                    (
                        [
                            "0[49]",
                            "1[50]",
                            "2[51]",
                            "3[52]",
                            "4[53]",
                            "5[54]",
                            "6[55]",
                            "7[56]",
                            "8[57]",
                            "9[58]",
                            "00[620]",
                            "01[621]",
                            "02[622]",
                            "03[623]",
                            "04[624]",
                            "05[625]",
                            "06[626]",
                            "07[627]",
                            "08[628]",
                            "09[629]",
                            "10[630]",
                            "11[631]",
                            "12[632]",
                            "13[633]",
                            "14[634]",
                            "15[635]",
                            "16[636]",
                            "17[637]",
                            "18[638]",
                            "19[639]",
                            "20[640]",
                            "21[641]",
                            "22[642]",
                            "23[643]",
                            "24[644]",
                            "25[645]",
                            "26[646]",
                            "27[647]",
                            "28[648]",
                            "29[649]",
                            "30[650]",
                            "31[651]",
                            "32[652]",
                            "33[653]",
                            "34[654]",
                            "35[655]",
                            "36[656]",
                            "37[657]",
                            "38[658]",
                            "39[659]",
                            "40[660]",
                            "41[661]",
                            "42[662]",
                            "43[663]",
                            "44[664]",
                            "45[665]",
                            "46[666]",
                            "47[667]",
                            "48[668]",
                            "49[669]",
                            "50[670]",
                            "51[671]",
                            "52[672]",
                            "53[673]",
                            "54[674]",
                            "55[675]",
                            "56[676]",
                            "57[677]",
                            "58[678]",
                            "59[679]",
                            "60[680]",
                            "61[681]",
                            "62[682]",
                            "63[683]",
                            "64[684]",
                            "65[685]",
                            "66[686]",
                            "67[687]",
                            "68[688]",
                            "69[689]",
                            "70[690]",
                            "71[691]",
                            "72[692]",
                            "73[693]",
                            "74[694]",
                            "75[695]",
                            "76[696]",
                            "77[697]",
                            "78[698]",
                            "79[699]",
                            "80[700]",
                            "81[701]",
                            "82[702]",
                            "83[703]",
                            "84[704]",
                            "85[705]",
                            "86[706]",
                            "87[707]",
                            "88[708]",
                            "89[709]",
                            "90[710]",
                            "91[711]",
                            "92[712]",
                            "93[713]",
                            "94[714]",
                            "95[715]",
                            "96[716]",
                            "97[717]",
                            "98[718]",
                            "99[719]",
                        ],
                        [],
                    ),
                ),
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .#\"\\A[0-9]+\\z\"[0]\"\n\"[0]",
                                start_position: 0,
                                state: "[3(InProgress)]",
                            },
                        ],
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> #\"\\A[0-9]+\\z\"[0].\"\n\"[0]",
                                start_position: 0,
                                state: "[0]",
                            },
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .#\"\\A[0-9]+\\z\"[0]\"\n\"[0]",
                                start_position: 0,
                                state: "[5(Accept)]",
                            },
                        ],
                    ],
                    (
                        [
                            "\n[11]",
                            "0[49]",
                            "1[50]",
                            "2[51]",
                            "3[52]",
                            "4[53]",
                            "5[54]",
                            "6[55]",
                            "7[56]",
                            "8[57]",
                            "9[58]",
                            "00[620]",
                            "01[621]",
                            "02[622]",
                            "03[623]",
                            "04[624]",
                            "05[625]",
                            "06[626]",
                            "07[627]",
                            "08[628]",
                            "09[629]",
                            "10[630]",
                            "11[631]",
                            "12[632]",
                            "13[633]",
                            "14[634]",
                            "15[635]",
                            "16[636]",
                            "17[637]",
                            "18[638]",
                            "19[639]",
                            "20[640]",
                            "21[641]",
                            "22[642]",
                            "23[643]",
                            "24[644]",
                            "25[645]",
                            "26[646]",
                            "27[647]",
                            "28[648]",
                            "29[649]",
                            "30[650]",
                            "31[651]",
                            "32[652]",
                            "33[653]",
                            "34[654]",
                            "35[655]",
                            "36[656]",
                            "37[657]",
                            "38[658]",
                            "39[659]",
                            "40[660]",
                            "41[661]",
                            "42[662]",
                            "43[663]",
                            "44[664]",
                            "45[665]",
                            "46[666]",
                            "47[667]",
                            "48[668]",
                            "49[669]",
                            "50[670]",
                            "51[671]",
                            "52[672]",
                            "53[673]",
                            "54[674]",
                            "55[675]",
                            "56[676]",
                            "57[677]",
                            "58[678]",
                            "59[679]",
                            "60[680]",
                            "61[681]",
                            "62[682]",
                            "63[683]",
                            "64[684]",
                            "65[685]",
                            "66[686]",
                            "67[687]",
                            "68[688]",
                            "69[689]",
                            "70[690]",
                            "71[691]",
                            "72[692]",
                            "73[693]",
                            "74[694]",
                            "75[695]",
                            "76[696]",
                            "77[697]",
                            "78[698]",
                            "79[699]",
                            "80[700]",
                            "81[701]",
                            "82[702]",
                            "83[703]",
                            "84[704]",
                            "85[705]",
                            "86[706]",
                            "87[707]",
                            "88[708]",
                            "89[709]",
                            "90[710]",
                            "91[711]",
                            "92[712]",
                            "93[713]",
                            "94[714]",
                            "95[715]",
                            "96[716]",
                            "97[717]",
                            "98[718]",
                            "99[719]",
                        ],
                        [
                            "\n[11]",
                        ],
                    ),
                ),
            ],
            to_be_completed_items: [],
            to_be_completed_items_buffer: [],
            deduplication_buffer: [],
            postdot_items: [],
            column_to_postdot_items: [],
            postdot_items_since_last_commit: [],
            leo_items: [],
            leo_items_buffer: [],
            already_predicted_nonterminals: [],
            finished: false,
            config: EngineConfig {
                cache_enabled: true,
                compaction_enabled: false,
            },
            regex_start_config: Config {
                look_behind: None,
                anchored: Yes,
            },
        },
    ),
}
